--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <div>
-        <img src="logo192.png" id="ball" alt="desc" />
-      </div>
+<!--      <div>-->
+<!--        <h1>Rabotai blin</h1>-->
+<!--        <img src="logo192.png" id="ball" alt="desc" />-->
+<!--      </div>-->
     </div>
   </body>
 </html>
