--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-<!--      <div>-->
-<!--        <h1>Rabotai blin</h1>-->
-<!--        <img src="logo192.png" id="ball" alt="desc" />-->
-<!--      </div>-->
-    </div>
+    <div id="root"></div>
   </body>
 </html>
